// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Badge control 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  controlled={true}
  counter={1}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="topRight"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Badge"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
  suppress={true}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Badge__BadgeContainerView
    className="ui-badge-container"
  >
    Test Component
    <Badge__BadgeView
      className="ui-badge test-class"
      disabled={false}
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "blue",
          "border": "solid 0.125em",
          "color": "red",
        }
      }
      visible={true}
    >
      1
    </Badge__BadgeView>
  </Badge__BadgeContainerView>
</Wrapper>
`;

exports[`Test making the Badge control invisible 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  counter={0}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="topRight"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Badge"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "border": "solid 0.125em",
      "color": "red",
    }
  }
  suppress={false}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={false}
  width={null}
  xcss={null}
>
  <Badge__BadgeContainerView
    className="ui-badge-container"
  />
</Wrapper>
`;

exports[`Test the disabling of a Badge control 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  counter={0}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  id={null}
  left={null}
  location="topRight"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth={null}
  name="Badge"
  noborder={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  onClick={[Function]}
  onError={[Function]}
  onUpdate={[Function]}
  padding={null}
  reset={false}
  ripple={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "white",
      "border": "solid 0.125em",
      "color": "red",
    }
  }
  suppress={false}
  testing={true}
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "buttonColor": "#666666",
      "chevronColor": "#cccccc",
      "color": "#000000",
      "fontFamily": "OpenSans, Georgia, serif",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "itemHoverColor": "#bedb39",
      "outlineColor": "#51cbee",
      "searchFocus": "#51cbee",
      "searchMatch": "#fd7400",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "titleBarBackgroundColor": "#004358",
      "titleBarForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.33s",
    }
  }
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Badge__BadgeContainerView
    className="ui-badge-container"
  >
    <Badge__BadgeView
      className="ui-badge nohover"
      disabled={true}
      location="topRight"
      onClick={[Function]}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "white",
          "border": "solid 0.125em",
          "color": "red",
        }
      }
      visible={true}
    >
      0
    </Badge__BadgeView>
  </Badge__BadgeContainerView>
</Wrapper>
`;
